fix social icons alignment

--- a/styles.css
+++ b/styles.css
@@ -12045,33 +12045,46 @@ ul.socials {
 	right: 20px;
 }
 
+.socials a {
+	/* background-color: red; */
+	position: relative;
+}
+
+a.email {
+  right: 31px;
+}
+
+a.linkedin {
+  right: 34px;
+}
+
+a.github {
+  right: 16px;
+}
+
+a.resume {
+  right: 12px;
+}
+
+.socials img {
+	height: 75px;
+	width: 75px;
+}
+
 .icon-email {
-	height: 74px;
-	width: 74px;
-	position: relative;
-	right: 44px;
-	top: 0px;
+	border-radius: 0%;
 }
+
 .icon-linkedin {
-	height: 81px;
-	width: 81px;
-	position: relative;
-	right: 47px;
-	top: 0px;
+	border-radius: 25%;
 }
+
 .icon-github {
-	height: 84px;
-	width: 84px;
-	position: relative;
-	right: 25px;
-	top: 0px;
+	border-radius: 25%;
 }
+	
 .icon-resume {
-	height: 100px;
-	width: 100px;
-	position: relative;
-	right: 20px;
-	top: 0px;
+	border-radius: 0%;
 }
 
 .text-email {
